# Datenlogger-Desktop-App

./: README.md  components.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml  test.yml
arduino/connect-sketch/: connect.ino
arduino/connect-sketch/connect/: connect.ino
arduino/connectAndLoggerSketch/: README.md  connectAndLoggerSketch.ino
src/: App.tsx  error-page.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2023-05-17-122928_create_posts/: up.sql
src-tauri/migrations/2023-05-22-083940_create_uploads/: down.sql  up.sql
src-tauri/migrations/2023-06-15-124133_create_files/: up.sql
src-tauri/migrations/2023-06-15-130459_create_test/: up.sql
src-tauri/src/: cmd.rs  db.rs  fileinfo.rs  main.rs  models.rs  schema.rs  sensebox.rs  serialPortAsync.rs  serialports.rs
src-tauri/src/core/: config.rs
src/components/: EditConfigForm.tsx  MapWithBoundingBox.tsx  auth-provider.tsx  board-switcher.tsx  data-table-pagination.tsx  data-table-toolbar.tsx  data-table.tsx  edit-config-dialog.tsx  icons.tsx  main-nav.tsx  protected-route.tsx  sd-card-overview.tsx  sd-card-table-button-bar.tsx  sd-card-table.tsx  upload-all-dialog.tsx  upload-dialog.tsx  user-auth-form.tsx  user-nav.tsx
src/components/ui/: LoadingOverlay.tsx  (+11 more)
src/lib/: fs.ts  showToast.tsx  useOpenSenseMapLogin.ts
src/routes/: arduino.tsx  boards.tsx  folder.tsx  help.tsx  login.tsx  root.tsx  upload.tsx
src/styles/: LoadingOverlay.module.css
src/types/: index.d.ts
(+9 files in other folders)
