[package]
name = "connect-app-desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
csv = "1.1"
tauri = { version = "1.3", features = ["fs-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version="0.4", features = ["serde"] }
diesel = { version = "2.0.2", features = ["sqlite", "chrono", "uuid"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
libsqlite3-sys = { version = "^0", features = ["bundled"] }
rusb = "0.9"
serialport = "4.2.0"
sysinfo = "0.29.7"
uuid = { version = "1.2.1", features = [ "v4", "fast-rng", "macro-diagnostics" ] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
